# QFilter

./: .gitignore  CHANGELOG.md  README.md  package.json  tailwind.config.js
.cursor/rules/: taurirule.mdc
.github/workflows/: publish.yml
QFilter/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
QFilter/.cursor/rules/: reactrule.mdc  ui.mdc
QFilter/src/: App.tsx  i18n.ts  index.css
QFilter/src-tauri/: Cargo.toml  tauri.conf.json
QFilter/src-tauri/capabilities/: default.json
QFilter/src-tauri/icons/: icon.icns
QFilter/src-tauri/migrations/: 0001_create_model_settings.sql
QFilter/src-tauri/src/: lib.rs
QFilter/src/components/: animated-theme-toggle.tsx  layout-switcher.tsx  morphing-square.tsx  project-data-table.tsx  qr-upload-panel.tsx
QFilter/src/components/data-table/: project-data-table.tsx
QFilter/src/components/dialog/: animated-modal.tsx
QFilter/src/components/icons/: alipay-brand-icon.ts
QFilter/src/components/ui/: animated-collection.tsx  avatar.tsx  (+4 more)
QFilter/src/pages/: About.tsx  Dashboard.tsx  Settings.tsx
scripts/: extract_changelog_section.py
src/: App.tsx  index.css
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0002_add_prompt_to_model_settings.sql  0003_create_offline_ocr_settings.sql
src-tauri/src/: lib.rs  main.rs
src/components/: layout-switcher.tsx  qr-upload-panel.tsx
src/components/data-table/: project-data-table.tsx
src/components/uoload/: use-image-upload.tsx
src/pages/: About.tsx  Dashboard.tsx  Settings.tsx
src/types/: qiniu-js.d.ts
(+1 files in other folders)
